# skill-sync

./: AGENTS.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: check-release-versions.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppBrand.tsx  MainSyncWindow.tsx  RootsWindow.tsx  SettingsWindow.tsx  SkillDiffPanel.tsx
src/lib/: compare.test.ts  compare.ts  fallback.ts  github.test.ts  github.ts  i18n.test.ts  i18n.ts  menu.ts  onboarding.test.ts  onboarding.ts  persistence.test.ts  persistence.ts  status.test.ts  status.ts  syncDecisions.test.ts  syncDecisions.ts  tauri.ts  time.ts  types.ts  windowing.ts
src/state/: usePreferencesState.ts  useRootsState.ts  useSkillSyncState.ts
