[package]
name = "skill-sync-mac"
version = "0.1.0"
description = "Visual skill root synchronization for Codex and Claude"
authors = ["kadewu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }

[features]
default = []
